<resources>
    <string name="app_name">Blood Donor App</string>
    <string name="location1_text">Pusat Darah Negara Midvalley Donation Suite</string>
    <string name="location1_address">T-063, 3rd floor Mezzanine, Lingkaran Syed Putra, Mid Valley Megamall, 59200 Kuala Lumpur</string>
    <string name="location2_text">National Blood Centre</string>
    <string name="location2_address">Jln Tun Razak, Titiwangsa, 50400 Kuala Lumpur, Wilayah Persekutuan Kuala Lumpur</string>
    <string name="location3_address">Jabatan Perubatan Tranfusi, 59100 Kuala Lumpur, Wilayah Persekutuan Kuala Lumpur</string>
    <string name="location3_text">Jabatan Perubatan Transfusi</string>
    <string name="location4_text">Sedarah Malaysia</string>
    <string name="location4_address">1, Jalan 1/149e, Bandar Sri Petaling, 57000 Kuala Lumpur, Wilayah Persekutuan Kuala Lumpur</string>
    <string name="location5_text">Pusat Darah Negara Donation Suite (PDN) Putrajaya</string>
    <string name="location5_address">Lot PT 2280, 2283, Persiaran Seri Perdana, Presint 10, 62000 Putrajaya</string>
    <string name="AgeText">You are aged between 18 and 65.\n
         \n
        * In some countries national legislation permits 16–17 year-olds to donate provided that they fulfil the physical and hematological criteria required and that appropriate consent is obtained.  \n
         \n
        * In some countries, regular donors over the age of 65 may be accepted at the discretion of the responsible physician. The upper age limit in some countries are 60.  \n </string>
    <string name="WeightText">You weigh at least 50 kg. \n       \n* In some countries, donors of whole blood donations should weigh at least 45 kg to donate 350 ml ± 10% . \n</string>
    <string name="HealthText">You must be in good health at the time you donate. \n   \nYou cannot donate if you have a cold, flu, sore throat, cold sore, stomach bug or any other infection. \n
         \n If you have recently had a tattoo or body piercing you cannot donate for 6 months from the date of the procedure. \n
         \n If the body piercing was performed by a registered health professional and any inflammation has settled completely, you can donate blood after 12 hours. \n
         \n If you have visited the dentist for a minor procedure you must wait 24 hours before donating; for major work wait a month. \n
         \n You must not donate blood If you do not meet the minimum haemoglobin level for blood donation \n
         \n * A test will be administered at the donation site. In many countries, a haemoglobin level of not less than 12.0 g/dl for females and not less than 13.0 g/dl for males as the threshold. \n</string>
    <string name="TravelText">Travel to areas where mosquito-borne infections are endemic, e.g. malaria, dengue and Zika virus infections, may result in a temporary deferral . \n
         \n Many countries also implemented the policy to defer blood donors with a history of travel or residence for defined cumulative exposure periods in specified countries or areas, as a measure to reduce the risk of transmitting variant Creutzfeldt-Jakob Disease (vCJD) by blood transfusion.<br></br></string>
    <string name="BehaviourText">You must not give blood:
         \n If you engaged in “at risk” sexual activity in the past 12 months\n
         \n Individuals with behaviours below will be deferred permanently:\n
         \n Have ever had a positive test for HIV (AIDS virus) \n
         \n Have ever injected recreational drugs. \n
         \n * In the national blood donor selection guidelines, there are more behavior eligibility criteria. Criteria could be different in different countries. \n</string>
    <string name="PregnancyText">Following pregnancy, the deferral period should last as many months as the duration of the pregnancy.\n
         \n It is not advisable to donate blood while breast-feeding.
        Following childbirth, the deferral period is at least 9 months (as for pregnancy) and until 3 months after your baby is significantly weaned (i.e. getting most of his/her nutrition from solids or bottle feeding). \n </string>
</resources>