<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="openLocation3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Blood Donation Centres"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /> 


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/banner"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hospital" />

            <TextView
                android:id="@+id/BloodDonationText"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginBottom="50dp"
                android:background="@color/purple_200"
                android:gravity="center|left"
                android:text="  Donate some blood with us :) "
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location1_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location1_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location1_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/location1_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="openLocation1"
                    android:layout_weight="1"
                    android:text="Go now" />

                <Button
                    android:id="@+id/location1_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:onClick="request"
                    android:layout_weight="1"
                    android:text="Request" />

            </LinearLayout>

            <TextView
                android:id="@+id/location2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location2_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location2_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location2_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/location2_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="openLocation2"
                    android:layout_weight="1"
                    android:text="Go now" />

                <Button
                    android:id="@+id/location2_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:onClick="request"
                    android:layout_weight="1"
                    android:text="Request" />

            </LinearLayout>

            <TextView
                android:id="@+id/location3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location3_text"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location3_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location3_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/location3_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="openLocation3"
                    android:layout_weight="1"
                    android:text="Go now" />

                <Button
                    android:id="@+id/location3_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:onClick="request"
                    android:layout_weight="1"
                    android:text="Request" />

            </LinearLayout>

            <TextView
                android:id="@+id/location4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location4_text"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location4_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location4_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/location4_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="openLocation4"
                    android:layout_weight="1"
                    android:text="Go now" />

                <Button
                    android:id="@+id/location4_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:onClick="request"
                    android:layout_weight="1"
                    android:text="Request" />

            </LinearLayout>

            <TextView
                android:id="@+id/location5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location5_text"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/location5_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location5_address" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <Button
                    android:id="@+id/location5_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="openLocation5"
                    android:layout_weight="1"
                    android:text="Go now" />

                <Button
                    android:id="@+id/location5_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:onClick="request"
                    android:layout_weight="1"
                    android:text="Request" />

            </LinearLayout>

            <TextView
                android:id="@+id/blank1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blank2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
